--- a/views/HomePage.erb
+++ b/views/HomePage.erb
@@ -1,2 +1,2 @@
 <h1 class="title">Pizza Shop</h1>
-<p class="subtitle">Stone baked to perfection</p>
+<p class="subtitle">Stone coded to perfection</p>
