--- a/views/show.erb
+++ b/views/show.erb
@@ -1,4 +1,4 @@
-<h1 class="pageTitle">Single Pizza</h1>
+<h2 class="pageTitle">Single Pizza</2>
 
 <p>First Name: <%= @order.first_name %> </p>
 <p>Last Name: <%= @order.last_name %> </p>
