--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,11 @@
-<h1>All the pizzas!</h1>
+<h2>All the pizzas!</h2>
 
 <%# Flake on ice cream cone is used for printing out %>
+<div class="scroll" style="overflow: auto; width:400px; height:250px;">
 
 <% for order in @orders %> <%# @orders is an array passed from the controller %>
   <p>Name: <%= order.pretty_name() %></p>
   <p>Order: <%= order.quantity %> <%= order.topping %> </p>
   <p><a href="/pizza-orders/<%= order.id %>">Show Order</a></p>
 <% end %>
+</div>
